Bug 1129210. Always enable vsync when touch events occur. r=kats